# Athena

./: .codexignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .plugin-scanner.toml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  justfile  pixi.toml  pyproject.toml  renovate.json
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  dependabot.yml
.github/rulesets/: homeric-main-baseline.json
.github/workflows/: _required.yml  merge-queue-smoke.yml  release.yml
athena/: __init__.py  validate_marketplace.py
docs/: README.md  dependency-resolution.md  host-compatibility.md  release-notes.md  supply-chain-security.md
docs/adr/: 0001-plugin-distro-scope-policy.md
docs/policies/: development.md  evidence-integrity.md  required-checks.md
plugins/athena/.codex-plugin/: plugin.json
plugins/athena/skills/advise/: SKILL.md
plugins/athena/skills/finish-branch/: SKILL.md
plugins/athena/skills/git-worktrees/: SKILL.md
plugins/athena/skills/learn/: SKILL.md
plugins/athena/skills/skill-advisor/: SKILL.md
plugins/athena/skills/systematic-debugging/: SKILL.md
scripts/: __init__.py  ci_policy.py  coverage_policy.py  generate_sboms.py  package-plugin.sh  package_plugin.py  scan_vulnerabilities.py  semver.py  validate_skills.py
scripts/policies/: __init__.py  pull_request.py  release.py  required_jobs.py  suppressions.py  vulnerabilities.py
security/: grype.yaml  vulnerability-exceptions.yaml
skills/: THIRD_PARTY_LICENSES.md  _cli.py
skills/advise/: SKILL.md
skills/brainstorm/: SKILL.md
skills/code-review/: SKILL.md
skills/code-review/scripts/: review_diff.py
skills/create-reusable-utilities/: SKILL.md
skills/finish-branch/: SKILL.md
skills/git-worktrees/: SKILL.md
skills/git-worktrees/scripts/: prepare_worktree.py
skills/github-actions-python-cicd/: SKILL.md
skills/learn/: SKILL.md
skills/myrmidon-swarm/: SKILL.md
skills/pr-review/: SKILL.md
skills/pr-review/references/: criteria.md
skills/pr-review/scripts/: collect_evidence.py  diff_context.py  pr_identity.py  resolve_pr.py
skills/python-repo-modernization/: SKILL.md
skills/repo-review/: SKILL.md
skills/repo-review/references/: criteria.md
skills/skill-advisor/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/systematic-debugging/scripts/: repository_evidence.py
skills/test-driven-development/: SKILL.md
skills/tidy/: SKILL.md
skills/tidy/scripts/: remove_worktree.py
skills/verification/: SKILL.md
skills/worktree-cleanup/: SKILL.md
skills/worktree-cleanup/scripts/: audit_worktrees.py  remove_worktree.py
tests/: test_package_plugin.py  test_validate_skills.py
tests/fixtures/: fake_gh.py
tests/unit/: __init__.py  test_ci_policy.py  test_coverage_policy.py  test_package_plugin.py  test_skill_scripts.py  test_supply_chain.py  test_validate_marketplace.py  test_validate_skills.py
